--- a/Chart.yaml
+++ b/Chart.yaml
@@ -8,8 +8,4 @@ dependencies:
   - name: ingress-nginx 
     version: "4.0.13"
     repository: "https://kubernetes.github.io/ingress-nginx"
-    alias: ingress-nginx1
-  - name: ingress-nginx 
-    version: "4.0.13"
-    repository: "https://kubernetes.github.io/ingress-nginx"
-    alias: ingress-nginx2
+    alias: ingress-nginx
