--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -3,13 +3,31 @@ kind: Ingress
 metadata:
   name: hello-ingress
 spec:
-  ingressClassName: nginx1
+  ingressClassName: "nginx-test"
   rules:
   - host: 34.84.4.218.nip.io
     http:
       paths:
       - pathType: Prefix
         path: "/"
+        backend:
+          service:
+            name: hello-service
+            port:
+              number: 8080
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: hello-ingress2
+spec:
+  ingressClassName: "nginx-test"
+  rules:
+  - host: 34.84.4.218.nip.io
+    http:
+      paths:
+      - pathType: Prefix
+        path: "/api"
         backend:
           service:
             name: hello-service
